Upgrade dependencies + replace openAI SDK